# generative-ai-sales-assistant

./: .gitignore  README.md  app.env  pyproject.toml
ai_agent_coach/: openai_requester.py  test_openai_requests.ipynb
app/: main.py  settings.py
app/routers/intent_detection/: intent_detection.py
app/routers/search/: search.py
app/routers/websockets/: websockets.py
devtools/: Objection best practices.txt  Pricing best practices.txt  Product_Service value best practices.txt  vector_db_requester.py  vector_db_test.ipynb  vector_db_uploader.py
exploration/: requirements.txt  whisper_call_back_test.py  whisper_tests.ipynb
slm_few_shot_classifier/: install_ollama.sh  ollama_utils.py  slm_classifier.py  test_slm_classifier.ipynb
transcriber/: whisper_call_back.py
